    various information from those timings, and displaying them in
    different formats.

  - Reduce some unnecessary stat() calls from on-disk entry type checks.

  - Fix SideEffect() when used with -j, which was badly broken in 0.96.93.

  - Propagate TypeError exceptions when evaluating construction variable
    expansions up the stack, so users can see what's going on.

  From Ben Leslie:

  - Fix post-Memoizer value caching misspellings in Node.FS._doLookup().

  From Rob Managan, Dmitry Mikhin and Joel B. Mohler:

  - Handle TeX/LaTeX files in subdirectories by changing directory
    before invoking TeX/LaTeX.

  - Scan LaTeX files for \bibliography lines.

  - Support multiple file names in a "\bibliography{file1,file2}" string.

  - Handle TeX warnings about undefined citations.

  - Support re-running LaTeX if necessary due to a Table of Contents.

  From Dmitry Mikhin:

  - Return LaTeX if "Rerun to get citations correct" shows up on the next
    line after the "Warning:" string.

  From Gary Oberbrunner:

  - Add #include lines to fix portability issues in two tests.

  - Eliminate some unnecessary os.path.normpath() calls.

  From Tom Parker:

  - Have the error message print the missing file that Qt can't find.

  From John Pye:

  - Fix env.MergeFlags() appending to construction variable value of None.

  From Steve Robbins:

  - Fix the "sconsign" script when the .sconsign.dblite file is explicitly
    specified on the command line (and not intuited from the old way of
    calling it with just ".sconsign").

  From Sohail Somain:

  - Have the mslink.py Tool only look for a 'link' executable on Windows
    systems.

  From Vaclav Smilauer:

  - Add support for a "srcdir" keyword argument when calling a Builder,
    which will add a srcdir prefix to all non-relative string sources.

  From Jonathan Ultis:

  - Allow Options converters to take the construction environment as
    an optional argument.


